@@ -1,6 +1,7 @@
 * release 0.2.9b
 	- added PSX hint screens
 	- added 'volume' submenu
+	- fixed sounds volume and panning
 
 * release 0.2.9
 	- added PSP and Wii platforms specific code
